grammar.js
    module: ($) => seq(repeat($.statement)),

    // Statements
    preprocessor_statement: ($) =>
      prec.right(
        seq(
          '#',
          token.immediate('if'),
          field('condition', $.expression),
          repeat($.statement),
          repeat(
            seq('#', token.immediate('elseif'), field('condition', $.expression), repeat($.statement)),
          ),
          optional(seq('#', token.immediate('else'), repeat($.statement))),
          '#',
          token.immediate('end'),
        ),
      ),

    package_statement: ($) =>
      seq(
        'package',
        optional(field('name', seq(repeat(seq($.package_name, '.')), $.package_name))),
        $._semicolon,
      ),

    package_name: ($) => $._camelCaseIdentifier,
    type_name: ($) => $._pascalCaseIdentifier,
    import_statement: ($) =>
      seq(
        'import',
        seq(
          repeat(seq($.package_name, '.')),
          repeat(seq($.type_name, '.')),
          choice(
            seq('*'),
            seq($.type_name, optional(seq('.', alias($._camelCaseIdentifier, $.identifier)))),
          )
        ),
        optional(seq(choice('as', 'in'), choice($.type_name, alias($._camelCaseIdentifier, $.identifier)))),
        $._semicolon,
      ),

    using_statement: ($) =>
      seq(
        'using',
        seq(repeat(seq($.package_name, '.')), repeat(seq($.type_name, '.')), $.type_name),
        $._semicolon,
      ),

    throw_statement: ($) => prec.right(seq('throw', $.expression, $._lookback_semicolon)),

    // 'this' is added directly here (not just reachable via member_expression's
    // object field) so bare `this` works as a standalone expression -- return
    // value, assignment RHS, call argument, etc. -- not just as the head of a
    // member-access chain (`this.foo`). Pre-existing gap, unrelated to the two
    // fixes above; found by testing against real code in this depot, where
    // bare `this` is common (589 files).
    _rhs_expression: ($) =>
      prec(1, choice($._literal, $.identifier, 'this', $.member_expression, $.call_expression)),

    runtime_type_check_expression: ($) =>
      prec(20, seq('(', alias($.structure_type_pair, 'type_check'), ')')),
    //     runtime_type_check_expression: ($) => prec.left(10, seq('(', $.pair, ')')),

    switch_expression: ($) =>
      prec.right(
        seq(
          'switch',
          choice($.identifier, $._parenthesized_expression),
          alias($.switch_block, $.block),
        ),
      ),

    _closing_brace: ($) => seq($._closing_brace_marker, '}'),

    case_statement: ($) =>
      prec.right(
        choice(
          seq('case', choice($._rhs_expression, alias('_', $._rhs_expression)), ':', $.statement),
          seq('default', ':', $.statement),
        ),
      ),

    cast_expression: ($) =>
      choice(
        seq('cast', $._rhs_expression),
        seq('cast', '(', $._rhs_expression, optional(seq(',', field('type', $.type))), ')'),
      ),

    type_trace_expression: ($) => seq('$type', '(', $._rhs_expression, ')'),

    // Anonymous function literal used in expression position (callback
    // arguments, variable-declaration RHS, etc.) -- `doThing(function(x) {
    // ... })`. There was previously no way to write a function as an
    // expression at all: $.function_declaration is a statement-level
    // $.declaration that always ends in $._lookback_semicolon, which isn't
    // present (and shouldn't be consumed) when a function literal is nested
    // inside a call's argument list or ends right at ')'. Real-world code
    // uses this constantly (373 files in this depot pass an anonymous
    // function as a callback argument). Deliberately excludes
    // $._modifier/type_params (not valid on an anonymous function) and the
    // trailing semicolon (the function's block is the end of the
    // expression, whatever follows -- ')', ',', ';' -- belongs to the
    // enclosing construct, not this rule).
    _parenthesized_expression: ($) => seq('(', repeat1(prec.left($.expression)), ')'),

    // Previously baked `identifier 'in' ...` directly into this rule --
    // a workaround from when `for` itself was an unimplemented placeholder
    // keyword, using range_expression to soak up a for-loop's `(i in
    // 0...10)` content via accidental juxtaposition. Now that $.for_statement
    // provides its own real binding + 'in' + iterable structure, a dedicated
    // range_expression node turned out to be unnecessary: `$._rangeOperator`
    // is already one of `$.operator`'s choices, so the plain chain
    // alternative in `expression` below (`_rhs_expression (operator
    // _chain_term)*`) already parses `0...10`, `arr.length - 1 ...
    // arr.length + 5`, etc. correctly on its own, with no ERROR and no
    // separate rule needed -- confirmed empirically: a dedicated
    // range_expression rule (built the same way, with a narrowed operand
    // operator set to avoid it swallowing its own '...' separator) never
    // once got chosen over the plain chain in testing, for either a bare
    // `0...10` or a for-loop's iterable. Removed rather than left in as
    // unreachable dead code.

    // A chain term that may optionally carry a leading prefix-unary operator
    // (`!y`, `-y`, etc.), used only in a chain's TAIL positions (never as a
    // chain's head -- using this in head position reintroduces an extra
    // reduce step that collides with the head's own shift/reduce decision
    // and silently breaks even plain chains like `1 + 2`; confirmed by
    // testing, not just theorized). Restricted to tail positions, it lets
    // `a && !b`, `!a && !b`, etc. parse -- not just `!a && b`, which the
    // leading-unary `expression` alternative below already covers.
    // $.subscript_expression is included alongside $._rhs_expression here
    // so it can appear as a chain's TAIL term too (`null != m_cache[id]`) --
    // not just as a chain's HEAD, which the dedicated
    // `seq($.subscript_expression, repeat1(...))` alternative in
    // `expression` below already covers. Found via a depot-wide sweep, not
    // assumed: `while (null != m_timer[id]) { ... }` is real code in this
    // depot.
    //
    // $._parenthesized_expression is included for the same reason: a
    // parenthesized sub-expression could previously only appear as an
    // ENTIRE standalone expression (the top-level $._parenthesized_expression
    // choice in `expression` below), never as one term of a longer chain --
    // so `0...(10)`, `a + (b)`, `total = (a + b) / 2`, etc. all hard-errored.
    // Found via a depot-wide Haxe parse-error sweep (0...(width*height) in
    // haxe/src/com/masque/mah/common/ZMap.hx), then confirmed general rather
    // than range-operator-specific by testing plain arithmetic. This fixes
    // the TAIL position; see the dedicated
    // `seq($._parenthesized_expression, repeat1(...))` alternative in
    // `expression` below for the analogous HEAD-position fix.
    _ternary_condition: ($) =>
      prec(
        2,
        choice(
          $._unaryExpression,
          $.subscript_expression,
          $.cast_expression,
          $._parenthesized_expression,
          // Tail terms use $._chain_term (not $._rhs_expression) so a
          // parenthesized tail term works here too -- `(x >= 0) && (x < 10)
          // ? a : b` previously hard-errored even though the unparenthesized
          // `x >= 0 && x < 10 ? a : b` worked fine, since $._rhs_expression
          // still excludes $._parenthesized_expression. Found via the same
          // depot-wide sweep as $._chain_term's own parenthesized-term fix
          // above (haxe/src/com/masque/mah/common/ZMap.hx:210).
          seq($._rhs_expression, repeat(seq($.operator, $._chain_term))),
          // A parenthesized HEAD term followed by more chain -- `(x >= 0) &&
          // y ? a : b`. Same head/tail split as $._parenthesized_expression's
          // two fixes in $._chain_term / `expression` above; repeat1-gated so
          // a solo `(x >= 0)` alone still resolves via the standalone
          // $._parenthesized_expression choice above, not this one.
          seq($._parenthesized_expression, repeat1(seq($.operator, $._chain_term))),
        ),
      ),

    // https://haxe.org/manual/expression-ternary.html
    ternary_expression: ($) =>
      prec.right(
        3,
        seq(
          field('condition', $._ternary_condition),
          '?',
          field('consequence', $.expression),
          ':',
          field('alternative', $.expression),
        ),
      ),

    subscript_expression: ($) =>
      prec.left(
        1,
        seq(
          choice($.identifier, $._parenthesized_expression, $.member_expression),
          '[',
          field('index', $.expression),
          ']',
        ),
        //           seq($._parenthesized_expression, '[', field('index', $.expression), ']'),
      ),

    // Left-associative (issue #52: `a.b.c` parses as `(a.b).c`, not
    // `a.(b.c)`) via recursion on the object side -- $.member_expression is
    // itself a valid `object`, and `member` is a single non-recursive
    // $.identifier. The '?.' tokenization stays atomic (one token, no
    // space allowed) rather than '?' and '.' as two separate tokens: with
    // them separate, `identifier '?'` is ambiguous between "start of
    // safe-nav" and "start of a ternary_expression" -- resolving that
    // needs to see whether '.' follows, i.e. 2 tokens of lookahead, more
    // than LALR(1) has. Making '?.' atomic pushes that decision into the
    // lexer instead of the parser -- needed for ternary support.
    member_expression: ($) =>
      prec.left(1,
        seq(
          field('object', choice('this', $.identifier, $.member_expression, $._literal)),
          choice(token('.'), alias(token(seq('?', '.')), $.operator)),
          field('member', $.identifier),
        ),
      ),

    _lhs_expression: ($) => prec(1, choice($.identifier, $.member_expression)),

    type: ($) =>
      prec.right(
        choice(
          seq(
            choice(
              field('type_name', $._lhs_expression),
              field('built_in', alias($.builtin_type, $.identifier)),
            ),
            optional($.type_params),
          ),
          $.function_type,
          seq('(', alias($.type, 'type'), ')'),
        ),
      ),

    // Known limitation: a genuinely EMPTY `{}` used as a control-flow body
    // (`if (cond) {}`, `while (cond) {}`, etc. -- 42 files in this depot)
    // resolves to an empty $.object (an object-literal expression
    // statement), not $.block. $.block is not even reachable from
    // $.expression's own choice list, so this is really "empty $.object
    // (reached via $.statement's `seq($.expression, ';')` alternative) vs.
    // $.block (a sibling alternative of that same $.statement choice) for
    // identical input" -- and empirically, this resolves independent of
    // every lever tried: declaring `[$.block, $.object]` in `conflicts`
    // gets flagged as unnecessary (tree-sitter's own analysis says this
    // isn't a real, GLR-forkable ambiguity), `prec`/`prec.dynamic` on
    // either rule (even prec(1000)) has zero effect, an explicit
    // `choice($.block, $.statement)` at the body field doesn't change it,
    // and neither does reordering which rule is declared first in this
    // file. This suggests tree-sitter's table construction is merging the
    // two empty-content states before precedence would ever be consulted,
    // which isn't fixable by anything expressible in grammar.js alone.
    // Non-empty bodies (`if (cond) { a(); }`) are entirely unaffected --
    // $.object's content is $.pair-shaped, which can never be confused
    // with $.block's $.statement-shaped content once there's real content
    // to look at.
    block: ($) => seq('{', repeat($.statement), $._closing_brace),

    _arg_list: ($) => seq('(', commaSep($.expression), ')'),

    // Bodies are $.statement, not $.block -- Haxe's `if (cond) expr;` (no
    // braces) is standard, idiomatic syntax (~660 files in this depot use
    // it), and was completely broken here (forcing braces on every branch).
    // $.statement already covers both shapes (`{ ... }` via its own
    // $.block alternative, or a bare `expr;` via its
    // `seq($.expression, $._lookback_semicolon)` alternative), so reusing
    // it gets braceless bodies "for free" without a separate rule. Also
    // covers the earlier 'else if' fix (each branch gets its own
    // condition/body via repeat(...), reusing the same 'arguments_list'
    // field name across branches) as a strict subset -- this version adds
    // braceless bodies on top of that.
    conditional_statement: ($) =>
      prec.right(
        1,
        seq(
          field('name', 'if'),
          field('arguments_list', $._arg_list),
          field('body', $.statement),
          repeat(seq('else', 'if', field('arguments_list', $._arg_list), field('body', $.statement))),
          optional(seq('else', field('body', $.statement))),
        ),
      ),

    // https://haxe.org/manual/expression-while.html
    _call: ($) =>
      prec(
        1,
        seq(
          field('object', $._lhs_expression),
          optional($.type_params),
          field('arguments_list', $._arg_list),
        ),
      ),

    _constructor_call: ($) =>
      seq(
        'new',
        seq(
          repeat(seq($.package_name, '.')),
          repeat(seq($.type_name, '.')),
          field('constructor', $.type_name),
          optional($.type_params),
          field('arguments_list', $._arg_list),
        ),
      ),

    call_expression: ($) => choice($._call, $._constructor_call),

    ...operators,
    ...declarations,
    ...literals,

    identifier: ($) => /[a-zA-Z_]+[a-zA-Z0-9]*/,
    // Hidden Nodes in tree.
    _camelCaseIdentifier: ($) => /[a-z_]+[a-zA-Z0-9_]*/,
    _pascalCaseIdentifier: ($) => /[A-Z_]+[a-zA-Z0-9_]*/,
    _semicolon: ($) => $._lookback_semicolon,
  },
};

module.exports = grammar(haxe_grammar);
