test/corpus/package.txt
===================
Package Name
===================

package my;

---

(module (package_statement (keyword) (identifier)))

===================
Package Name with path
===================

package my.other.package;

---

(module (package_statement (keyword) (identifier)))
